--- a/sett/going-postal/going-postal.html
+++ b/sett/going-postal/going-postal.html
@@ -192,7 +192,7 @@ paymentChannel.subscribe(function (data) {
 });
 
 postal.channel('vehicle', 'reverse').publish({qty: 3});
-    </pre></code>
+    </code></pre>
 
     <p>
       When a subscription is no longer needed, calling <code>unsubscribe()</code> on the subscription object prevents the message handler from receiving any further messages from the bus.
